build-files/plassembler/1.6.2/README.md
# plassembler container

Main tool: [plassembler](https://github.com/gbouras13/plassembler)
  
Code repository: https://github.com/gbouras13/plassembler

<details>

<summary>Additional tools installed via micromamba:</summary>

```
  Name                       Version       Build                 Channel    
──────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex              0.1           conda_forge           conda-forge
  _openmp_mutex              4.5           2_gnu                 conda-forge
  about-time                 4.2.1         pyhd8ed1ab_0          conda-forge
  alive-progress             3.1.5         pyhd8ed1ab_0          conda-forge
  alsa-lib                   1.2.13        hb9d3cd8_0            conda-forge
  archspec                   0.2.3         pyhd8ed1ab_0          conda-forge
  attr                       2.5.1         h166bdaf_1            conda-forge
  binutils_impl_linux-64     2.43          h4bf12b8_4            conda-forge
  biopython                  1.83          py38h01eb140_0        conda-forge
  blast                      2.16.0        h66d330f_4            bioconda   
  brotli-python              1.1.0         py38h17151c0_1        conda-forge
  bzip2                      1.0.8         h4bc722e_7            conda-forge
  c-ares                     1.34.4        hb9d3cd8_0            conda-forge
  ca-certificates            2025.1.31     hbcca054_0            conda-forge
  cairo                      1.18.2        h3394656_1            conda-forge
  canu                       2.2           ha47f30e_0            bioconda   
  capnproto                  1.0.2         h766bdaa_3            conda-forge
  certifi                    2024.8.30     pyhd8ed1ab_0          conda-forge
  cffi                       1.17.0        py38heb5c249_0        conda-forge
  charset-normalizer         3.4.0         pyhd8ed1ab_0          conda-forge
  chopper                    0.9.1         hcdda2d0_0            bioconda   
  clang                      19.1.7        default_h9e3a008_1    conda-forge
  clang-19                   19.1.7        default_hb5137d0_1    conda-forge
  click                      8.1.7         unix_pyh707e725_0     conda-forge
  curl                       8.12.1        h332b0f4_0            conda-forge
  cyrus-sasl                 2.1.27        h54b06d7_7            conda-forge
  dbus                       1.13.6        h5008d03_3            conda-forge
  dnaapler                   0.8.1         pyhdfd78af_0          bioconda   
  entrez-direct              22.4          he881be0_0            bioconda   
  expat                      2.6.4         h5888daf_0            conda-forge
  fastp                      0.24.0        heae3180_1            bioconda   
  flye                       2.9.5         py38hd638cd3_1        bioconda   
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0            conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0            conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0            conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3            conda-forge
  fontconfig                 2.15.0        h7e30c49_1            conda-forge
  fonts-conda-ecosystem      1             0                     conda-forge
  fonts-conda-forge          1             0                     conda-forge
  freetype                   2.12.1        h267a509_2            conda-forge
  fribidi                    1.0.10        h36c2ea0_0            conda-forge
  gettext                    0.23.1        h5888daf_0            conda-forge
  gettext-tools              0.23.1        h5888daf_0            conda-forge
  giflib                     5.2.2         hd590300_0            conda-forge
  glib                       2.82.2        h07242d1_1            conda-forge
  glib-tools                 2.82.2        h4833e2c_1            conda-forge
  gnuplot                    5.4.10        hb1719d7_0            conda-forge
  grapheme                   0.6.0         pyhd8ed1ab_0          conda-forge
  graphite2                  1.3.13        h59595ed_1003         conda-forge
  gsl                        2.7           he838d99_0            conda-forge
  gst-plugins-base           1.24.7        h0a52356_0            conda-forge
  gstreamer                  1.24.7        hf3bb09a_0            conda-forge
  h2                         4.1.0         pyhd8ed1ab_0          conda-forge
  harfbuzz                   10.3.0        h76408a6_0            conda-forge
  hpack                      4.0.0         pyh9f0ad1d_0          conda-forge
  htslib                     1.21          h566b1c6_1            bioconda   
  hyperframe                 6.0.1         pyhd8ed1ab_0          conda-forge
  icu                        75.1          he02047a_0            conda-forge
  idna                       3.10          pyhd8ed1ab_0          conda-forge
  isa-l                      2.31.1        hb9d3cd8_1            conda-forge
  k8                         1.2           h6618dc6_1            bioconda   
  kernel-headers_linux-64    3.10.0        he073ed8_18           conda-forge
  keyutils                   1.6.1         h166bdaf_0            conda-forge
  krb5                       1.21.3        h659f571_0            conda-forge
  lame                       3.100         h166bdaf_1003         conda-forge
  lcms2                      2.17          h717163a_0            conda-forge
  ld_impl_linux-64           2.43          h712a8e2_4            conda-forge
  lerc                       4.0.0         h27087fc_0            conda-forge
  libasprintf                0.23.1        h8e693c7_0            conda-forge
  libasprintf-devel          0.23.1        h8e693c7_0            conda-forge
  libblas                    3.9.0         31_h59b9bed_openblas  conda-forge
  libcap                     2.71          h39aace5_0            conda-forge
  libcblas                   3.9.0         31_he106b2a_openblas  conda-forge
  libclang-cpp19.1           19.1.7        default_hb5137d0_1    conda-forge
  libclang13                 19.1.7        default_h9c6a7e4_1    conda-forge
  libcups                    2.3.3         h4637d8d_4            conda-forge
  libcurl                    8.12.1        h332b0f4_0            conda-forge
  libdeflate                 1.23          h4ddbbb0_0            conda-forge
  libdrm                     2.4.124       hb9d3cd8_0            conda-forge
  libedit                    3.1.20250104  pl5321h7949ede_0      conda-forge
  libegl                     1.7.0         ha4b6fd6_2            conda-forge
  libev                      4.33          hd590300_2            conda-forge
  libevent                   2.1.12        hf998b51_1            conda-forge
  libexpat                   2.6.4         h5888daf_0            conda-forge
  libffi                     3.4.6         h2dba641_0            conda-forge
  libflac                    1.4.3         h59595ed_0            conda-forge
  libgcc                     14.2.0        h767d61c_2            conda-forge
  libgcc-devel_linux-64      14.2.0        h9c4974d_102          conda-forge
  libgcc-ng                  14.2.0        h69a702a_2            conda-forge
  libgcrypt-lib              1.11.0        hb9d3cd8_2            conda-forge
  libgd                      2.3.3         h6f5c62b_11           conda-forge
  libgettextpo               0.23.1        h5888daf_0            conda-forge
  libgettextpo-devel         0.23.1        h5888daf_0            conda-forge
  libgfortran                14.2.0        h69a702a_2            conda-forge
  libgfortran5               14.2.0        hf1ad2bd_2            conda-forge
  libgl                      1.7.0         ha4b6fd6_2            conda-forge
  libglib                    2.82.2        h2ff4ddf_1            conda-forge
  libglvnd                   1.7.0         ha4b6fd6_2            conda-forge
  libglx                     1.7.0         ha4b6fd6_2            conda-forge
  libgomp                    14.2.0        h767d61c_2            conda-forge
  libgpg-error               1.51          hbd13f7d_1            conda-forge
  libiconv                   1.18          h4ce23a2_1            conda-forge
  libidn2                    2.3.7         hd590300_0            conda-forge
  libjpeg-turbo              3.0.0         hd590300_1            conda-forge
  liblapack                  3.9.0         31_h7ac8fdf_openblas  conda-forge
  libllvm19                  19.1.7        ha7bfdaf_1            conda-forge
  liblzma                    5.6.4         hb9d3cd8_0            conda-forge
  liblzma-devel              5.6.4         hb9d3cd8_0            conda-forge
  libnghttp2                 1.64.0        h161d5f1_0            conda-forge
  libnsl                     2.0.1         hd590300_0            conda-forge
  libntlm                    1.8           hb9d3cd8_0            conda-forge
  libogg                     1.3.5         h4ab18f5_0            conda-forge
  libopenblas                0.3.29        pthreads_h94d23a6_0   conda-forge
  libopus                    1.3.1         h7f98852_1            conda-forge
  libpciaccess               0.18          hd590300_0            conda-forge
  libpng                     1.6.47        h943b412_0            conda-forge
  libpq                      17.4          h27ae623_0            conda-forge
  libsndfile                 1.2.2         hc60ed4a_1            conda-forge
  libsqlite                  3.49.1        hee588c1_1            conda-forge
  libssh2                    1.11.1        hf672d98_0            conda-forge
  libstdcxx                  14.2.0        h8f9b012_2            conda-forge
  libstdcxx-ng               14.2.0        h4852527_2            conda-forge
  libsystemd0                257.3         h3dc2cb9_0            conda-forge
  libtiff                    4.7.0         hd9ff511_3            conda-forge
  libunistring               0.9.10        h7f98852_0            conda-forge
  libuuid                    2.38.1        h0b41bf4_0            conda-forge
  libvorbis                  1.3.7         h9c3ff4c_0            conda-forge
  libwebp-base               1.5.0         h851e524_0            conda-forge
  libxcb                     1.17.0        h8a09558_0            conda-forge
  libxcrypt                  4.4.36        hd590300_1            conda-forge
  libxkbcommon               1.8.0         hc4a0caf_0            conda-forge
  libxml2                    2.13.6        h8d12d68_0            conda-forge
  libzlib                    1.3.1         hb9d3cd8_2            conda-forge
  loguru                     0.7.2         py38h578d9bd_1        conda-forge
  lz4-c                      1.10.0        h5888daf_1            conda-forge
  mash                       2.3           hb105d93_9            bioconda   
  miniasm                    0.3           h577a1d6_5            bioconda   
  minimap2                   2.28          h577a1d6_4            bioconda   
  mpg123                     1.32.9        hc50e24c_0            conda-forge
  mysql-common               9.0.1         h266115a_4            conda-forge
  mysql-libs                 9.0.1         he0572af_4            conda-forge
  ncbi-vdb                   3.2.0         h9948957_0            bioconda   
  ncurses                    6.5           h2d0b736_3            conda-forge
  nspr                       4.36          h5888daf_0            conda-forge
  nss                        3.108         h159eef7_0            conda-forge
  numpy                      1.24.4        py38h59b608b_0        conda-forge
  openjdk                    23.0.2        h68779a4_0            conda-forge
  openldap                   2.6.9         he970967_0            conda-forge
  openssl                    3.4.1         h7b32b05_0            conda-forge
  packaging                  24.2          pyhd8ed1ab_2          conda-forge
  pandas                     2.0.3         py38h01efb38_1        conda-forge
  pango                      1.56.1        h861ebed_0            conda-forge
  pcre2                      10.44         hba22ea6_2            conda-forge
  perl                       5.32.1        7_hd590300_perl5      conda-forge
  perl-archive-tar           2.40          pl5321hdfd78af_0      bioconda   
  perl-carp                  1.50          pl5321hd8ed1ab_0      conda-forge
  perl-common-sense          3.75          pl5321hd8ed1ab_0      conda-forge
  perl-compress-raw-bzip2    2.201         pl5321hbf60520_0      conda-forge
  perl-compress-raw-zlib     2.202         pl5321hadc24fc_0      conda-forge
  perl-encode                3.21          pl5321hb9d3cd8_1      conda-forge
  perl-exporter              5.74          pl5321hd8ed1ab_0      conda-forge
  perl-exporter-tiny         1.002002      pl5321hd8ed1ab_0      conda-forge
  perl-extutils-makemaker    7.70          pl5321hd8ed1ab_0      conda-forge
  perl-filesys-df            0.92          pl5321h7b50bb2_9      bioconda   
  perl-io-compress           2.201         pl5321h503566f_4      bioconda   
  perl-io-zlib               1.14          pl5321hdfd78af_0      bioconda   
  perl-json                  4.10          pl5321hdfd78af_1      bioconda   
  perl-json-xs               4.03          pl5321h9948957_4      bioconda   
  perl-list-moreutils        0.430         pl5321hdfd78af_0      bioconda   
  perl-list-moreutils-xs     0.430         pl5321h7b50bb2_4      bioconda   
  perl-parent                0.243         pl5321hd8ed1ab_0      conda-forge
  perl-pathtools             3.75          pl5321hb9d3cd8_1      conda-forge
  perl-scalar-list-utils     1.68          pl5321hb9d3cd8_0      conda-forge
  perl-storable              3.15          pl5321hb9d3cd8_0      conda-forge
  perl-types-serialiser      1.01          pl5321hdfd78af_0      bioconda   
  pip                        24.3.1        pyh8b19718_0          conda-forge
  pixman                     0.44.2        h29eaf8c_0            conda-forge
  plassembler                1.6.2         pyhdfd78af_0          bioconda   
  pthread-stubs              0.4           hb9d3cd8_1002         conda-forge
  pulseaudio-client          17.0          hb77b528_0            conda-forge
  pycparser                  2.22          pyhd8ed1ab_0          conda-forge
  pyrodigal                  3.6.3         py38h0020b31_0        bioconda   
  pysam                      0.22.1        py38h2d19e03_2        bioconda   
  pysocks                    1.7.1         pyha2e5f31_6          conda-forge
  python                     3.8.20        h4a871b0_2_cpython    conda-forge
  python-dateutil            2.9.0         pyhd8ed1ab_0          conda-forge
  python-tzdata              2024.2        pyhd8ed1ab_0          conda-forge
  python_abi                 3.8           5_cp38                conda-forge
  pytz                       2024.2        pyhd8ed1ab_0          conda-forge
  pyyaml                     6.0.2         py38h2019614_0        conda-forge
  qt-main                    5.15.15       hc3cb62f_2            conda-forge
  racon                      1.5.0         h077b44d_6            bioconda   
  raven-assembler            1.8.3         h5ca1c30_3            bioconda   
  readline                   8.2           h8c095d6_2            conda-forge
  requests                   2.32.3        pyhd8ed1ab_0          conda-forge
  rpsbproc                   0.5.0         hd6d6fdc_2            bioconda   
  samtools                   1.21          h96c455f_1            bioconda   
  setuptools                 75.3.0        pyhd8ed1ab_0          conda-forge
  six                        1.16.0        pyh6c4a22f_0          conda-forge
  spades                     4.1.0         haf24da9_0            bioconda   
  sysroot_linux-64           2.17          h0157908_18           conda-forge
  tk                         8.6.13        noxft_h4845f30_101    conda-forge
  tzdata                     2025a         h78e105d_0            conda-forge
  unicycler                  0.5.1         py38h40d3509_2        bioconda   
  urllib3                    2.2.3         pyhd8ed1ab_0          conda-forge
  wget                       1.21.4        hda4d442_0            conda-forge
  wheel                      0.45.1        pyhd8ed1ab_0          conda-forge
  xcb-util                   0.4.1         hb711507_2            conda-forge
  xcb-util-image             0.4.0         hb711507_2            conda-forge
  xcb-util-keysyms           0.4.1         hb711507_0            conda-forge
  xcb-util-renderutil        0.3.10        hb711507_0            conda-forge
  xcb-util-wm                0.4.2         hb711507_0            conda-forge
  xkeyboard-config           2.43          hb9d3cd8_0            conda-forge
  xorg-libice                1.1.2         hb9d3cd8_0            conda-forge
  xorg-libsm                 1.2.5         he73a12e_0            conda-forge
  xorg-libx11                1.8.11        h4f16b4b_0            conda-forge
  xorg-libxau                1.0.12        hb9d3cd8_0            conda-forge
  xorg-libxdamage            1.1.6         hb9d3cd8_0            conda-forge
  xorg-libxdmcp              1.1.5         hb9d3cd8_0            conda-forge
  xorg-libxext               1.3.6         hb9d3cd8_0            conda-forge
  xorg-libxfixes             6.0.1         hb9d3cd8_0            conda-forge
  xorg-libxi                 1.8.2         hb9d3cd8_0            conda-forge
  xorg-libxrandr             1.5.4         hb9d3cd8_0            conda-forge
  xorg-libxrender            0.9.12        hb9d3cd8_0            conda-forge
  xorg-libxt                 1.3.1         hb9d3cd8_0            conda-forge
  xorg-libxtst               1.2.5         hb9d3cd8_3            conda-forge
  xorg-libxxf86vm            1.1.6         hb9d3cd8_0            conda-forge
  xz                         5.6.4         hbcc6ac9_0            conda-forge
  xz-gpl-tools               5.6.4         hbcc6ac9_0            conda-forge
  xz-tools                   5.6.4         hb9d3cd8_0            conda-forge
  yaml                       0.2.5         h7f98852_2            conda-forge
  zlib                       1.3.1         hb9d3cd8_2            conda-forge
  zstandard                  0.19.0        py38h0a891b7_0        conda-forge
  zstd                       1.5.7         hb8e6e7a_1            conda-forge
```

</details>

Basic information on how to use this tool:
- executable: plassembler
- help: --help
- version: --version
- description: |

> plassembler is a program that is designed for automated & fast assembly of plasmids in bacterial genomes that have been hybrid sequenced with long read & paired-end short read sequencing. It was originally designed for Oxford Nanopore Technologies long reads, but it will also work with Pacbio reads. As of v1.3.0, it also works well for long-read only assembled genomes.

Additional information:

The plsdb database that plassembler uses has been pre-downloaded at /plassembler_db using the following command:
```
plassembler download -d /plassembler_db
```
  
Full documentation: https://github.com/gbouras13/plassembler

## Example Usage

```bash
plassembler run \
    -l nanopore.fastq.gz \
    -1 illumina_R1.fastq.gz \
    -2 illumina_R2.fastq.gz \
    -d /plassembler_db \
    -o <output_directory> \
    -t <threads> \
    -c <chromosome size>
```
